Chatroom: Fix repository chat user menu links don't work on mobile devices (Mantis issue 30573)

--- a/templates/default/less/Modules/Chatroom/delos.less
+++ b/templates/default/less/Modules/Chatroom/delos.less
@@ -105,6 +105,10 @@ td.chatroom {
 		.box-shadow(none);
 	}
 
+	.dropdown-backdrop {
+		position: static;
+	}
+
 	.media {
 		padding: 0;
 	}
